--- a/sitereport.html
+++ b/sitereport.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Site Report</title>
+    <title>Site Report!</title>
     <link rel="stylesheet" href="sitereportmain.css" media="screen"/>
     <link rel="stylesheet" href="sitereportmobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="sitereportdesktop.css" media="screen and (min-width: 1000px)" />
