--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home Page!</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="indexmain.css" media="screen"/>
     <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
