--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio Page!</title>
+    <title>Portfolio Page</title>
     <link rel="stylesheet" href="portfoliomain.css" media="screen"/>
     <link rel="stylesheet" href="portfoliomobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="portfoliodesktop.css" media="screen and (min-width: 1000px)" />
