added nav to header with links to different pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
      <header>
-          <h1>Hi I'm Jeffery - Welcome to my Portfolio Site</h1>
+       <nav>
+         <ul>
+           <li><a href="index.html">Home</a>
+           <li><a href="portfolio.html">My Portfolio</a>
+           <li><a href="cv.html">My CV</a>
+           <li><a href="sitereport.html">Site Report</a>
+           <li><a href="contact.html">Contact Me</a> 
+         </ul>
+       </nav>
      </header>
 
      <nav>
