--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <header>
        <nav>
          <ul>
-           <li><a href="index.html">Home</a>
+           <li class="currenthomepage"><a href="index.html">Home</a>
            <li><a href="portfolio.html">My Portfolio</a>
            <li><a href="cv.html">My CV</a>
            <li><a href="sitereport.html">Site Report</a>
