--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
      <header>
+       <div class="logo">
+        <img src="logo.png">
+       </div>     
+       
        <nav>
          <ul>
            <li class="currenthomepage"><a href="index.html">Home</a>
