added placeholder text more the main

--- a/index.html
+++ b/index.html
@@ -23,17 +23,9 @@
          </ul>
        </nav>
      </header>
-
-     <nav>
-
-     </nav>
-     
-
      <main>
+       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
      </main>
-
-     <aside>
-     </aside>
 
      <footer>
       &copy; Jeffery Aideyan-Ohonba 2020
