added target selectors and class for burger menu in html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
   </head>
-  <body>
+  <body id="close">
      <header>
+       <a href="#burger" class= "openmenu"></a>
        <div class="logo">
         <img src="logo.png">
        </div>     
        
-       <nav>
+       <nav id="burger">
+         <a href="#close" class="close">Close Menu</a>
          <ul>
            <li class="currenthomepage"><a href="index.html">Home</a>
            <li><a href="portfolio.html">My Portfolio</a>
