New default layout/overall design

--- a/index.html
+++ b/index.html
@@ -10,21 +10,37 @@
   <body id="close">
      <header>
        <a href="#burger" class= "openmenu"></a>
+
        <div class="logo">
         <img src="logo.png">
-       </div>     
+       </div> 
+
+     </header>    
        
-       <nav id="burger">
+     <nav>
          <a href="#close" class="close">Close Menu</a>
          <ul>
-           <li class="currenthomepage"><a href="index.html">Home</a>
-           <li><a href="portfolio.html">My Portfolio</a>
-           <li><a href="cv.html">My CV</a>
-           <li><a href="sitereport.html">Site Report</a>
-           <li><a href="contact.html">Contact Me</a> 
+           <li class="home">
+             <a href="index.html">Home</a>
+           </li>
+           <li class="portfolio">
+             <a href="portfolio.html">My portfolio</a>
+           </li>
+
+           <li class="cv">
+             <a href="cv.html">My CV</a>
+           </li>
+
+           <li class="sitereport">
+             <a href="sitereport.html">Site Report</a>
+           </li>
+
+           <li class="contact">
+             <a href="contact.html">Contact Me</a>
+           </li>
          </ul>
-       </nav>
-     </header>
+     </nav>
+
      <main>
        <h1>Welcome to my website</h1>
        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
