added id in order to target index mobile button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
      </header>    
        
-     <nav>
+     <nav id="burger">
          <a href="#close" class="close">Close Menu</a>
          <ul>
            <li class="home">
