made a few adjustment to the words on index main

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
      </nav>
 
      <main>
-       <h1>Welcome to my website</h1>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
+       <p>Hello,</p>
+       <h1>I'm Jeffery Aideyan-Ohonba</h1>
+       <p>Welcome to my website. Here you will get the chance to.....Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
      </main>
 
      <footer>
