MAINLY Added new font stylesheet and styled the different elements.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="indexmain.css" media="screen"/>
     <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   </head>
   <body id="close">
      <header>
@@ -24,11 +27,11 @@
              <a href="index.html">Home</a>
            </li>
            <li class="portfolio">
-             <a href="portfolio.html">My portfolio</a>
+             <a href="portfolio.html">Portfolio</a>
            </li>
 
            <li class="cv">
-             <a href="cv.html">My CV</a>
+             <a href="cv.html">CV</a>
            </li>
 
            <li class="sitereport">
@@ -42,7 +45,7 @@
      </nav>
 
      <main>
-       <p>Hello,</p>
+       <p class = "hello">Hello,</p>
        <h1>I'm Jeffery Aideyan-Ohonba</h1>
        <p>Welcome to my website. Here you will get the chance to.....Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
      </main>
