officially getting started with portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,54 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio Page</title>
-    <link rel="stylesheet" href="portfoliomain.css" media="screen"/>
-    <link rel="stylesheet" href="portfoliomobile.css" media="screen and (max-width: 1000px)" />
-    <link rel="stylesheet" href="portfoliodesktop.css" media="screen and (min-width: 1000px)" />
+    <title>Home Page</title>
+    <link rel="stylesheet" href="indexmain.css" media="screen"/>
+    <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
+    <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="close">
+     <header>
+       <a href="#burger" class= "openmenu"></a>
+
+       <div class="logo">
+        <img src="logo.png">
+       </div> 
+
+     </header>    
+       
+     <nav id="burger">
+         <a href="#close" class="close">Close Menu</a>
+         <ul>
+           <li class="home">
+             <a href="index.html">Home</a>
+           </li>
+           <li class="portfolio">
+             <a href="portfolio.html">Portfolio</a>
+           </li>
+
+           <li class="cv">
+             <a href="cv.html">CV</a>
+           </li>
+
+           <li class="sitereport">
+             <a href="sitereport.html">Site Report</a>
+           </li>
+
+           <li class="contact">
+             <a href="contact.html">Contact Me</a>
+           </li>
+         </ul>
+     </nav>
+
+     <main>
+       
+     </main>
+
+     <footer>
+      &copy; Jeffery Aideyan-Ohonba 2020
+     </footer>
   </body>
 </html>
