added portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,12 @@
      </nav>
 
      <main>
-       
+       <li img src="database.jpg"></li>
+       <li img src="web development.jpg"></li>
+       <li img src="software engineering.jpg"></li>
+       <li img src="problem solving.jpeg"></li>
+       <li img src="communication.jpg"></li>
+       <li img src="systems.jpg"></li>
      </main>
 
      <footer>
