added tiny change to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home Page</title>
-    <link rel="stylesheet" href="indexmain.css" media="screen"/>
-    <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
-    <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="portfoliomain.css" media="screen"/>
+    <link rel="stylesheet" href="portfoliomobile.css" media="screen and (max-width: 1000px)" />
+    <link rel="stylesheet" href="portfoliodesktop.css" media="screen and (min-width: 1000px)" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -45,12 +45,14 @@
      </nav>
 
      <main>
-       <li img src="database.jpg"></li>
-       <li img src="web development.jpg"></li>
-       <li img src="software engineering.jpg"></li>
-       <li img src="problem solving.jpeg"></li>
-       <li img src="communication.jpg"></li>
-       <li img src="systems.jpg"></li>
+       <ul>
+         <li img src="database1.jpg"></li>
+         <li img src="web development.jpg"></li>
+         <li img src="software engineering.jpg"></li>
+         <li img src="problem solving.jpeg"></li>
+         <li img src="communication.jpg"></li>
+         <li img src="systems.jpg"></li>
+       </ul>
      </main>
 
      <footer>
