--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,29 @@
 
      <main>
        <ul>
-         <li img src="database1.jpg"></li>
-         <li img src="web development.jpg"></li>
-         <li img src="software engineering.jpg"></li>
-         <li img src="problem solving.jpeg"></li>
-         <li img src="communication.jpg"></li>
-         <li img src="systems.jpg"></li>
+         <li class="database">
+           <img src="database1.jpg">
+         </li>
+
+         <li class="webdev">
+           <img src="web development.jpg">
+         </li>
+
+         <li class="software"> 
+            <img src="software engineering.jpg">
+         </li>
+
+         <li class="problemsolving"> 
+            <img src="problem solving.jpeg">
+         </li>
+
+         <li class="communication">
+           <img src="communication.jpg">
+         </li>
+
+         <li class="systems"> 
+           <img src="systems.jpg">
+         </li>
        </ul>
      </main>
 
