--- a/portfolio.html
+++ b/portfolio.html
@@ -47,26 +47,32 @@
      <main>
        <ul>
          <li class="database">
+           <p>CSY1026 - Databases 1</p>
            <img src="database1.jpg">
          </li>
 
          <li class="webdev">
+           <p>CSY1018 - Web Development 1</p>
            <img src="web development.jpg">
          </li>
 
          <li class="software"> 
+            <p>CSY1019 - Software Engineering 1</p>
             <img src="software engineering.jpg">
          </li>
 
          <li class="problemsolving"> 
+            <p>CSY1020 - Problem Solving & Programming</p>
             <img src="problem solving.jpeg">
          </li>
 
          <li class="communication">
+           <p>CSY1017 - Computer Communications</p>
            <img src="communication.jpg">
          </li>
 
          <li class="systems"> 
+           <p>CSY1014 - Computer Systems</p>
            <img src="systems.jpg">
          </li>
        </ul>
