made all the portfolio images responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,34 +48,64 @@
        <ul>
          <li class="database">
            <p>CSY1026 - Databases 1</p>
-           <img src="database1.jpg">
+           <a href ="#database1detail"><img src="database1.jpg"></a>
          </li>
 
          <li class="webdev">
            <p>CSY1018 - Web Development 1</p>
-           <img src="web development.jpg">
+           <a href ="#webdevdetail"><img src="web development.jpg"></a>
          </li>
 
          <li class="software"> 
             <p>CSY1019 - Software Engineering 1</p>
-            <img src="software engineering.jpg">
+            <a href ="#softwaredetail"><img src="software engineering.jpg"></a>
          </li>
 
          <li class="problemsolving"> 
             <p>CSY1020 - Problem Solving & Programming</p>
-            <img src="problem solving.jpeg">
+            <a href ="#problemsolvingdetail"><img src="problem solving.jpeg"></a>
          </li>
 
          <li class="communication">
            <p>CSY1017 - Computer Communications</p>
-           <img src="communication.jpg">
+           <a href ="#communicationsdetail"><img src="communication.jpg"></a>
          </li>
 
          <li class="systems"> 
            <p>CSY1014 - Computer Systems</p>
-           <img src="systems.jpg">
+           <a href ="#systemsdetail"><img src="systems.jpg"></a>
          </li>
        </ul>
+
+       <div id="database1detail" class="div1">
+         <h1>Lorem ipsum</h1>
+         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+       </div>
+
+       <div id="webdevdetail" class="div2">
+        <h1>Lorem ipsum</h1>
+        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+      </div>
+
+      <div id="softwaredetail" class="div3">
+        <h1>Lorem ipsum</h1>
+        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+      </div>
+
+      <div id="problemsolvingdetail" class="div4">
+        <h1>Lorem ipsum</h1>
+        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+      </div>
+
+      <div id="communicationsdetail" class="div5">
+        <h1>Lorem ipsum</h1>
+        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+      </div>
+
+      <div id="systemsdetail" class="div6">
+        <h1>Lorem ipsum</h1>
+        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+      </div>
      </main>
 
      <footer>
