changed 'close menu' to 'X' and customised it to a symbol

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="portfoliomobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="portfoliodesktop.css" media="screen and (min-width: 1000px)" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
   <body id="close">
      <header>
@@ -21,7 +22,7 @@
      </header>    
        
      <nav id="burger">
-         <a href="#close" class="close">Close Menu</a>
+         <a href="#close" class="close">X</a>
          <ul>
            <li class="home">
              <a href="index.html">Home</a>
