--- a/portfolio.html
+++ b/portfolio.html
@@ -79,38 +79,38 @@
        </ul>
 
        <div id="database1detail" class="div1">
-        <a href="#exitdiv1" class="close">Close</a>
+        <a href="#exitdiv1" class="exit">X</a>
          <h1>Lorem ipsum</h1>
          <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
        </div>
 
        <div id="webdevdetail" class="div2">
-        <a href="#exitdiv2" class="close">Close</a>
+        <a href="#exitdiv2" class="exit">X</a>
         <h1>Lorem ipsum</h1>
         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
       </div>
 
       <div id="softwaredetail" class="div3">
-        <a href="#exitdiv3" class="close">Close</a>
+        <a href="#exitdiv3" class="exit">X</a>
         <h1>Lorem ipsum</h1>
         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
       </div>
 
       <div id="problemsolvingdetail" class="div4">
-        <a href="#exitdiv4" class="close">Close</a>
+        <a href="#exitdiv4" class="exit">X</a>
         <h1>Lorem ipsum</h1>
         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
       </div>
 
       <div id="communicationsdetail" class="div5">
-        <a href="#exitdiv5" class="close">Close</a>
+        <a href="#exitdiv5" class="exit">X</a>
         <h1>Lorem ipsum</h1>
         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
         
       </div>
 
       <div id="systemsdetail" class="div6">
-        <a href="#exitdiv6" class="close">Close</a>
+        <a href="#exitdiv6" class="exit">X</a>
         <h1>Lorem ipsum</h1>
         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
         
