--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,65 @@
     <link rel="stylesheet" href="contactmain.css" media="screen"/>
     <link rel="stylesheet" href="contactmobile.css" media="screen and (max-width: 1000px)" />
     <link rel="stylesheet" href="contactdesktop.css" media="screen and (min-width: 1000px)" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="close">
+     <header>
+       <a href="#burger" class= "openmenu"></a>
+
+       <div class="logo">
+        <img src="logo.png">
+       </div> 
+
+     </header>    
+       
+     <nav id="burger">
+         <a href="#close" class="close">X</a>
+         <ul>
+           <li class="home">
+             <a href="index.html">Home</a>
+           </li>
+           <li class="portfolio">
+             <a href="portfolio.html">Portfolio</a>
+           </li>
+
+           <li class="cv">
+             <a href="cv.html">CV</a>
+           </li>
+
+           <li class="sitereport">
+             <a href="sitereport.html">Site Report</a>
+           </li>
+
+           <li class="contact">
+             <a href="contact.html">Contact Me</a>
+           </li>
+         </ul>
+     </nav>
+
+     <main>
+      <form action="action" method="GET">
+
+        <label for="userfullname">Full Name</label>
+        <input type="text" name="userfullnametextfield" id="userfullname" />
+
+        <label for="useremail">Email</label>
+        <input type="text" name="useremailtextfield" id="useremail" />
+
+        <label for="message">Message</label>
+        <textarea name="messagetextarea"></textarea>
+
+        <input type="submit" value="Submit" name="submit" />
+
+      </form>
+
+     </main>
+
+     <footer>
+      &copy; Jeffery Aideyan-Ohonba 2020
+     </footer>
   </body>
 </html>
