added new 'submit' class

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <label for="message">Message</label>
         <textarea name="messagetextarea"></textarea>
 
-        <input type="submit" value="Submit" name="submit" />
+        <input type="submit" class="submit" value="Submit" name="submit" />
 
       </form>
 
