--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,8 @@
      </nav>
 
      <main>
+      <h1>Contact</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada</p>
       <form action="action" method="GET">
 
         <label for="userfullname">Full Name</label>
