added cv profile image

--- a/cv.html
+++ b/cv.html
@@ -46,7 +46,11 @@
      </nav>
 
      <main>
-       <div class="cvleft">hhdhhd</div>
+       <div class="cvleft">hhdhhd
+         <div class="image">
+          <img src="profile.png">
+         </div>
+       </div>
        <div class="cvright">hhhhhhhhhdjjjjj</div>
      </main>
 
