setting up the left (profile) side of cv

--- a/cv.html
+++ b/cv.html
@@ -46,11 +46,45 @@
      </nav>
 
      <main>
-       <div class="cvleft">hhdhhd
+       <div class="cvleft">
          <div class="image">
-          <img src="profile.png">
+          <img src="profile.jpg">
+         </div>
+         <h1>CONTACT</h1>
+         <hr>
+         <br>
+         <div class="contactinfo">
+             <div class="dob">
+              <h1>Date of Birth:</h1>
+              <p>8th December, 2001</p>
+             </div> 
+             <div class="address">
+              <h1>Address:</h1>
+              <p>47 Cleve Road, Sidcup, DA14 4RS</p>
+             </div> 
+             <div class="phone">
+              <h1>Phone:</h1>
+              <p>07448076396</p>
+             </div> 
+             <div class="email">
+              <h1>E-mail:</h1>
+              <p>jeffery.ohonba20@my.northampton.ac.uk</p>
+              <hr>
+             </div> 
+             
+         </div>
+         <h1>INTERESTS</h1>
+         <hr>
+         <br>
+         <div class="interests">
+           <p>Physical Activities</p>
+           <p>Problem Solving</p>
+           <p>Online Games</p>
+           <p>Social Media</p>
+           <hr>
          </div>
        </div>
+
        <div class="cvright">hhhhhhhhhdjjjjj</div>
      </main>
 
