added module description to the different modules

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,39 +80,40 @@
 
        <div id="database1detail" class="div1">
         <a href="#exitdiv1" class="exit">X</a>
-         <h1>Lorem ipsum</h1>
-         <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+         <h2>Module Description</h2>
+         <p> Databases 1 is a hands-on module that applies data modelling techniques to establish, modify and maintain data structures and associated components such as entities, relationships and attribute definitions. Students undertake design of a databases applications and translate and implement development requirements into physical database structures using industry desirable software and languages such as Oracle, MySQL and Structured Query Language (SQL). The module highlights the application of industry standards and good practice to optimise employability and performance.</p>
        </div>
 
        <div id="webdevdetail" class="div2">
         <a href="#exitdiv2" class="exit">X</a>
-        <h1>Lorem ipsum</h1>
-        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+        <h2>Module Description</h2>
+        <p>The purpose of this module is to give students an understanding of client side web technologies. This module provides students with: the essential knowledge and practical skills to design develop and implement a Web site to contenporary web standard; an overview of the Internet technologies the overall software architecture of the Internet including servers clients browsers is covered leading to the use of a Web server to install maintain and publish Web Pages to achieve Web presence; standard client side dynamic web development environment such as HTML Cascading Style Sheets (CSS) and JavaScript are covered in detail.</p>
       </div>
 
       <div id="softwaredetail" class="div3">
         <a href="#exitdiv3" class="exit">X</a>
-        <h1>Lorem ipsum</h1>
-        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+        <h2>Module Description</h2>
+        <p> For the construction of any software system to be successful, appropriate knowledge (and the correct utilisation) of an assortment of techniques and tools is required throughout the traditional software life cycle. Requirements engineering, systems specification, analysis, design, and effective code development are all essential activities in any substantive software development. Implicitly, the appropriate knowledge and correct understanding of the processes involved in each of these developmental life-cycle activities are therefore essential for any software system developer.    
+          This module concentrates on creating object-based solutions to Software Engineering problems within several contemporary integrated development environments.</p>
       </div>
 
       <div id="problemsolvingdetail" class="div4">
         <a href="#exitdiv4" class="exit">X</a>
-        <h1>Lorem ipsum</h1>
-        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+        <h2>Module Description</h2>
+        <p>This part of the module introduces students to the skills, principles and concepts necessary to solve problems in computing. It also aims to develop essential skills to enable the solution of these problems with the construction of appropriate algorithms and a computer program. Principles underlying the design of a high level programming language will be introduced.</p>
       </div>
 
       <div id="communicationsdetail" class="div5">
         <a href="#exitdiv5" class="exit">X</a>
-        <h1>Lorem ipsum</h1>
-        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+        <h2>Module Description</h2>
+        <p>This module provides basic knowledge of the hardware and software components that make up a computer communication. Modern computer network not only consist of just the computer, but also include a range of network devices. The module gives an overview of all the important concepts in preparation for a deeper study of computer communication. Provide appropriate practical skills related to computer networking. To provide students with a comprehensive and broad understanding of the theory of computer networking.</p>
         
       </div>
 
       <div id="systemsdetail" class="div6">
         <a href="#exitdiv6" class="exit">X</a>
-        <h1>Lorem ipsum</h1>
-        <p> placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus olor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris</p>
+        <h2>Module Description</h2>
+        <p>This module provides basic knowledge of the hardware and software components that make up a computer system. Modern computer systems not only consist of just the computer, but also include a range of peripherals. The module gives an overview of all the important concepts in preparation for a deeper study of computer systems. Learning environments are offered to enable students to gain a basic comprehension, understanding and appreciation of computer system concepts and technologies, and the skills to use them to the best effect.</p>
         
       </div>
      </main>
