making changes that suits cv mobile version

--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
              </div> 
              <div class="email">
               <h1>E-mail:</h1>
-              <p>jeffery.ohonba20@my.northampton.ac.uk</p>
+              <p>Jeffonosa@gmail.com</p>
              </div> 
              
          </div>
