--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
 
      <main class="contact-form-section">
 
-      <h1>Contact</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada</p>
+      <h2>Contact</h2>
+      <p>For all enquiries, please fill in the form below or contact me on 07448076396.</p>
 
       <form class="contact-form" action="mailto:jeffery.ohonba20@my.northampton.ac.uk?subject=Contact Form" method="POST">  
   
