added new fonts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,900&display=swap" rel="stylesheet">
   </head>
   <body id="close">
      <header>
@@ -46,9 +50,9 @@
      </nav>
 
      <main>
-       <p class = "hello">Hello,</p>
+       <h3 class = "hello">Hello,</h3>
        <h1>I'm Jeffery Aideyan-Ohonba</h1>
-       <p>Welcome to my website. Here you will get the chance to.....Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sapien sed mauris placerat tincidunt. Nam at fermentum lorem, sit amet malesuada nisi. Vivamus porta turpis volutpat, blandit ligula ac, pretium massa. Sed egestas, tortor a aliquam sodales, velit nunc posuere nulla, quis vulputate mi tellus non erat. Duis in orci non dolor aliquet hendrerit. Vestibulum lacinia pharetra mauris quis lobortis. Mauris interdum bibendum lacus eu vulputate. Cras vel malesuada quam, at tempor tellus. Phasellus vel erat semper ligula pharetra aliquet. Nunc porttitor eros ac velit tincidunt, eu dictum eros tempor. Aliquam erat volutpat. Maecenas at vulputate sem.</p>
+       <p>Welcome to the world of a young web developer. Browse through my website to check out my amazing work. I promise you won't be disappointed.</p>
      </main>
 
      <footer>
