--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <a href="#burger" class= "openmenu"></a>
 
        <div class="logo">
-        <img src="logo.png">
+        <img src="logo.png" alt="">
        </div> 
 
      </header>    
