made the image tags and names valid.

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
        <a href="#burger" class= "openmenu"></a>
 
        <div class="logo">
-        <img src="logo.png">
+        <img src="logo.png" alt="">
        </div> 
 
      </header>    
@@ -51,32 +51,32 @@
        <ul>
          <li class="database">
            <p>CSY1026 - Databases 1</p>
-           <a href ="#database1detail"><img src="database1.jpg"></a>
+           <a href ="#database1detail"><img src="database1.jpg" alt=""></a>
          </li>
 
          <li class="webdev">
            <p>CSY1018 - Web Development 1</p>
-           <a href ="#webdevdetail"><img src="web development.jpg"></a>
+           <a href ="#webdevdetail"><img src="webdevelopment.jpg" alt=""></a>
          </li>
 
          <li class="software"> 
             <p>CSY1019 - Software Engineering 1</p>
-            <a href ="#softwaredetail"><img src="software engineering.jpg"></a>
+            <a href ="#softwaredetail"><img src="softwareengineering.jpg" alt=""></a>
          </li>
 
          <li class="problemsolving"> 
             <p>CSY1020 - Problem Solving & Programming</p>
-            <a href ="#problemsolvingdetail"><img src="problem solving.jpeg"></a>
+            <a href ="#problemsolvingdetail"><img src="problemsolving.jpeg" alt=""></a>
          </li>
 
          <li class="communication">
            <p>CSY1017 - Computer Communications</p>
-           <a href ="#communicationsdetail"><img src="communication.jpg"></a>
+           <a href ="#communicationsdetail"><img src="communication.jpg" alt=""></a>
          </li>
 
          <li class="systems"> 
            <p>CSY1014 - Computer Systems</p>
-           <a href ="#systemsdetail"><img src="systems.jpg"></a>
+           <a href ="#systemsdetail"><img src="systems.jpg" alt=""></a>
          </li>
        </ul>
 
