fixing validation error

--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@
        <a href="#burger" class= "openmenu"></a>
 
        <div class="logo">
-        <img src="logo.png">
+        <img src="logo.png" alt="">
        </div> 
 
      </header>    
@@ -50,7 +50,7 @@
      <main>
        <div class="cvleft">
          <div class="image">
-          <img src="profile.jpg">
+          <img src="profile.jpg" alt="">
          </div>
          <h2>CONTACT</h2>
          <br>
@@ -103,6 +103,8 @@
           <h2>EDUCATION</h2>
           <hr>
           <br>
+         </div>
+
           <div class="welling">
             <h4>WELLING SCHOOL, KENT</h4>
             <p>GCSE</p>
@@ -122,14 +124,16 @@
           <h2>SKILLS</h2>
           <hr>
           <br>
+         </div>
+         
           <div class="skillslist">
+            <ul>
               <li>HTML</li>
               <li>CSS</li>
               <li>Java</li>
               <li>Javascript</li>
+            </ul> 
           </div>
-         </div>
-         
        </div>
      </main>
 
