fixed validation error

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
        <a href="#burger" class= "openmenu"></a>
 
        <div class="logo">
-        <img src="logo.png">
+        <img src="logo.png" alt="">
        </div> 
 
      </header>    
@@ -52,7 +52,7 @@
       <h2>Contact</h2>
       <p>For all enquiries, please fill in the form below or contact me on 07448076396.</p>
 
-      <form class="contact-form" action="mailto:jeffery.ohonba20@my.northampton.ac.uk?subject=Contact Form" method="POST">  
+      <form class="contact-form" action= "mailto:jeffery.ohonba20@my.northampton.ac.uk?subject=ContactForm" method="POST">  
   
         <input type="text" class="contact-form-text" name="userfullname" placeholder="Full name">
 
