improved the copyright text in the footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
      </main>
 
      <footer>
-      &copy; Jeffery Aideyan-Ohonba 2020
+      Copyright &copy; 2020 JAY SITE. All rights reserved.
      </footer>
   </body>
 </html>
