--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
      </main>
 
      <footer>
-      &copy; Jeffery Aideyan-Ohonba 2020
+      Copyright &copy; 2020 JAY SITE. All rights reserved.
      </footer>
   </body>
 </html>
