officially getting started

--- a/sitereport.html
+++ b/sitereport.html
@@ -2,10 +2,56 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Site Report</title>
-    <link rel="stylesheet" href="sitereportmobile.css" media="screen and (max-width: 1000px)" />
-    <link rel="stylesheet" href="sitereportdesktop.css" media="screen and (min-width: 1000px)" />
+    <title>Home Page</title>
+    <link rel="stylesheet" href="indexmobile.css" media="screen and (max-width: 1000px)" />
+    <link rel="stylesheet" href="indexdesktop.css" media="screen and (min-width: 1000px)" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="close">
+     <header>
+       <a href="#burger" class= "openmenu"></a>
+
+       <div class="logo">
+        <img src="logo.png" alt="">
+       </div> 
+
+     </header>    
+       
+     <nav id="burger">
+         <a href="#close" class="close">X</a>
+         <ul>
+           <li class="home">
+             <a href="index.html">Home</a>
+           </li>
+           <li class="portfolio">
+             <a href="portfolio.html">Portfolio</a>
+           </li>
+
+           <li class="cv">
+             <a href="cv.html">CV</a>
+           </li>
+
+           <li class="sitereport">
+             <a href="sitereport.html">Site Report</a>
+           </li>
+
+           <li class="contact">
+             <a href="contact.html">Contact Me</a>
+           </li>
+         </ul>
+     </nav>
+
+     <main>
+       
+     </main>
+
+     <footer>
+      Copyright &copy; 2020 JAY SITE. All rights reserved.
+     </footer>
   </body>
 </html>
